--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "notistack": "^3.0.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-fast-marquee": "^1.6.4",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
+    "react-ticker": "^1.3.2",
     "recoil": "^0.7.7",
     "sass": "^1.71.1"
   },
