--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@algorandfoundation/algokit-utils": "^5.7.0",
     "@blockshake/defly-connect": "^1.1.6",
     "@daffiwallet/connect": "^1.0.3",
+    "@fontsource/inter": "^5.0.18",
     "@perawallet/connect": "^1.3.4",
+    "@tailwindcss/forms": "^0.5.7",
     "@txnlab/use-wallet": "^2.7.0",
     "algosdk": "^2.7.0",
     "axios": "^1.6.8",
